Fix input button text alignment

--- a/src/theme/components/button.scss
+++ b/src/theme/components/button.scss
@@ -110,3 +110,7 @@
 		}
 	}
 }
+
+.button_input {
+	text-align: left;
+}
